--- a/STSEval/app/templates/app/layout.html
+++ b/STSEval/app/templates/app/layout.html
@@ -57,10 +57,10 @@
         </div>
     </div>
 <div class="modal fade" id="modalMain" tabindex="-1" role="dialog" aria-labelledby="modalMainTitle" aria-hidden="true">
-  <div class="modal-dialog" role="document">
+  <div class="modal-dialog modal-lg" role="document">
     <div class="modal-content">
       <div class="modal-header" style="padding-top:0;padding-bottom:0">
-          <div>
+          <div class="w-100" align="center">
         <h5 class="modal-title" id="modalMainTitle">Lookup By Group</h5>
               </div>
         <button type="button" class="close" data-dismiss="modal" aria-label="Close" style="margin-left:inherit">
