--- a/STSEval/app/static/app/content/site.css
+++ b/STSEval/app/static/app/content/site.css
@@ -365,3 +365,8 @@ input[type="checkbox"].input-validation-error {
     width: 100% !important;
     max-width:none !important;
 }
+
+.management-button {
+    width:100px;
+    margin-bottom:.5rem;
+}
