--- a/STSEval/app/templates/app/layout.html
+++ b/STSEval/app/templates/app/layout.html
@@ -57,7 +57,7 @@
         </div>
     </div>
 <div class="modal fade" id="modalMain" tabindex="-1" role="dialog" aria-labelledby="modalMainTitle" aria-hidden="true">
-  <div class="modal-dialog modal-lg" role="document">
+  <div id="modalMainDoc" class="modal-dialog modal-lg" role="document">
     <div class="modal-content">
       <div class="modal-header" style="padding-top:0;padding-bottom:0">
           <div class="w-100" align="center">
