--- a/STSEval/app/static/app/content/site.css
+++ b/STSEval/app/static/app/content/site.css
@@ -383,3 +383,7 @@ input[type="checkbox"].input-validation-error {
     width: 98% !important;
     max-width: none !important;
 }
+.management-button-long {
+    width: 175px !important;
+    margin-bottom: .5rem;
+}
