athlete and team setup start

--- a/STSEval/app/static/app/content/site.css
+++ b/STSEval/app/static/app/content/site.css
@@ -370,8 +370,11 @@ input[type="checkbox"].input-validation-error {
     width:100px;
     margin-bottom:.5rem;
 }
-.errorList {
-    color:red;
+.errorlist {
+    color: red;
+    list-style-type: none;
+    padding-inline-start: 0px;
+    margin-bottom:0px !important;
 }
 .col-25 {
     -ms-flex: 0 0 20%;
