--- a/STSEval/management/templates/management/setup_competition.html
+++ b/STSEval/management/templates/management/setup_competition.html
@@ -59,7 +59,7 @@
 
     function btnNextClick() {
         if (SelectedSession != -1) {
-            window.location = "/management/setup_judges/?session=" + SelectedSession;
+            window.location = "/management/setup_judges/" + SelectedSession;
         }
     }
 
