--- a/STSEval/management/templates/management/judge_form.html
+++ b/STSEval/management/templates/management/judge_form.html
@@ -12,7 +12,7 @@
                 Email
             </div>
             <div class="col-3">
-                Pin
+                Password
             </div>
             {% for field in form.visible_fields %}
                 <div class="col-3 pb-1">
@@ -39,7 +39,7 @@
         {{ form.event }}
         <div id="divErrors">
             {% for err in form.non_field_errors %}
-                <div class="errorList">{{ err }}</div>
+                <div class="errorlist">{{ err }}</div>
             {% endfor %}
         </div>
         <br/>
